2006-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/prepared_statement.cxx,
 src/transaction_base.cxx, src/util.cxx:
  - Binary args to prepared statements got truncated at 0! Thanks Lumir Vanek
  - New from_string<>() with length argument
 include/pqxx/pqxx:
  - Also include binarystring
 include/pqxx/result.hxx:
  - Use new from_string() for strings
  - No longer include field names in conversion errors
 test/test000.cxx:
  - Test new from_string<>() versions
 test/test091.cxx:
  - Still doesn't work
  - Now throw exception rather than go into infinite recursion
 test/test092.cxx:
  - New
  - Tests nul byte in binary parameter to prepared statement
2006-08-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test001.cxx, test/test090.cxx:
  - Test new functions protocol_version() and server_version()
  - Test adorn_name()
  - Back to full test coverage for connection classes
 include/pqxx/cursor.hxx:
  - Now testing most of absolute_cursor (but not ready for use yet)
 test/test091.cxx:
  - New
  - Tests absolute_cursor
2006-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, test/test062.cxx:
  - Test esc_raw(const unsigned char[], size_t)
  - Back to full test coverage for transaction classes
2006-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - More now-unnecessary output filtering removed
2006-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Finally resolved Doxygen problems!
  - Corrected prepared-statement execution example
 include/pqxx/except.hxx:
  - too_many_connections is a broken_connection, not an insufficient_resources
  - New undefined_table class (too useful not to have)
 include/pqxx/subtransaction.hxx:
  - Documented class
 src/result.cxx:
  - Recognize undefined_table error
2006-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>