@@ -8,6 +8,7 @@
  - pqxx-config is deprecated; use pkg-config instead
  - On GNU/Linux, uses poll() instead of select() to avoid file descriptor limit
  - Will provide server and protocol version information where available
+ - New cursor class, absolute_cursor
 2.6.7
  - New escape functions for binary data: transaction_base::esc_raw()
  - Improved detection of socket libraries, especially for MinGW
